--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,18 +52,20 @@ android {
     }
      signingConfigs {
        release {
-           keyAlias keystoreProperties['keyAlias']
-           keyPassword keystoreProperties['keyPassword']
-           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-           storePassword keystoreProperties['storePassword']
+           storeFile file("./obr_bi.keystore.jks") //check that the file exists
+            storePassword "123456"
+            keyAlias "obr_bi"
+            keyPassword "123456"
        }
    }
 
     buildTypes {
         release {
 
-          // minifyEnabled false 
+        //   minifyEnabled false 
             signingConfig signingConfigs.release
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                    'proguard-rules.pro'
            
        }
     }
